[gd_scene load_steps=4 format=2]

[ext_resource path="res://SoundEffects/Acceleration.mp3" type="AudioStream" id=2]
[ext_resource path="res://SoundEffects/Drift.mp3" type="AudioStream" id=3]
[ext_resource path="res://Player_SoundEffects.gd" type="Script" id=4]

[node name="Player_SoundEffects" type="Node"]
script = ExtResource( 4 )

[node name="Drift_SE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Acceleration_SE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
pitch_scale = 0.01

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[connection signal="timeout" from="Network_tick_rate" to="." method="_on_Network_tick_rate_timeout"]
